--- a/Dockerfile.x86-64
+++ b/Dockerfile.x86-64
@@ -1,5 +1,4 @@
-# FROM gaarangoa/dsai:version-2.0.3_tf2.6.0_pt1.9.0
-FROM gaarangoa/ml:v2.1.0.1_ARM
+FROM gaarangoa/dsai:version-2.0.3_tf2.6.0_pt1.9.0
 
 ARG NB_USER=pbmf
 ARG NB_UID=1000
