--- a/Dockerfile.arm
+++ b/Dockerfile.arm
@@ -17,7 +17,7 @@ COPY . ${HOME}
 USER root
 RUN chown -R ${NB_UID} ${HOME} 
 
-RUN pip install git+https://github.com/gaarangoa/samecode.git
+RUN pip install --no-cache-dir git+https://github.com/gaarangoa/samecode.git
 
 WORKDIR ${HOME}
 RUN pip install .
